--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
-WORDPRESS_URL="https://arnautcode.com"
-WORDPRESS_HOSTNAME="arnautcode.com"
+WORDPRESS_URL="https://sali.arnautcode.com"
+WORDPRESS_HOSTNAME="sali.arnautcode.com"
 WORDPRESS_WEBHOOK_SECRET="arnautovic1234"
