--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.5",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "@fortawesome/react-fontawesome": "^0.2.x",
+    "@fortawesome/free-brands-svg-icons": "^6.4.x",
+    "@fortawesome/free-solid-svg-icons": "^6.4.x"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
